# ChangeLog for net-p2p/gift-cvs
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/gift-cvs/ChangeLog,v 1.11 2003/06/02 00:40:05 lostlogic Exp $

*gift-cvs-0.12.0 (01 Jun 2003)

  01 Jun 2003; Brandon Low <lostlogic@gentoo.org> gift-cvs-0.11.0.ebuild,
  gift-cvs-0.12.0.ebuild:
  Update to a working ebuild, closes bugs 22052 and 22061.

*gift-cvs-0.11.0 (31 May 2003)

  31 May 2003; Brandon Low <lostlogic@gentoo.org> gift-cvs-0.11.0.ebuild:
  New ebuild thanks to Frank Straetz from bug 21123 adds support for Gnutella
  and FastTrack networks.

  31 May 2003; Brandon Low <lostlogic@gentoo.org> gift-cvs-0.10.0.ebuild:
  Add fix for sandbox violations from bug 21701

  14 Jan 2003; Jon Nall <nall@gentoo.org> gift-cvs-0.10.0.ebuild :
  added ~ppc

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*gift-cvs-0.10.0 (30 Nov 2002) Bart Verwilst <verwilst@gentoo.org>

  18 Nov 2003; Brandon Low <lostlogic@gentoo.org>; gift-cvs-0.10.0.ebuild:
  Make use CFLAGS

  30 Nov 2002; Bart Verwilst <verwilst@gentoo.org>; gift-cvs-0.10.0.ebuild:
  Initial ebuild that uses the cvs eclass.. 