@@ -1,5 +1,5 @@
-MD5 ba8deea95df4ba59e903b06a7d8dc632 gift-cvs-0.12.0.ebuild 2942
+MD5 cfb5bf18a5053126291c7b85e284182f ChangeLog 1271
 MD5 d3a8edef24632770acea87143985a8d3 gift-cvs-0.10.0.ebuild 1244
-MD5 774cb751c59781a224ed3db2943243e4 ChangeLog 1189
+MD5 316330fca2a9c7b0568040afd9c9cb5e gift-cvs-0.12.0.ebuild 2954
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-gift-cvs-0.10.0 0
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-gift-cvs-0.12.0 0
