@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/gift-cvs
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/gift-cvs/ChangeLog,v 1.11 2003/06/02 00:40:05 lostlogic Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/gift-cvs/ChangeLog,v 1.12 2003/06/10 00:08:24 msterret Exp $
+
+  09 Jun 2003; <msterret@gentoo.org> gift-cvs-0.12.0.ebuild:
+  DEPEND on sed >= 4
 
 *gift-cvs-0.12.0 (01 Jun 2003)
 
